<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enregistre"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nomUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomUtilisateur"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/courriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/courriel"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/motDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motDePasse"
            android:inputType="textPassword"
            android:paddingLeft="30dp" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:paddingLeft="30dp" />

        <Button
            android:id="@+id/enregistre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/enregistre"
            android:textSize="11sp" />
    </LinearLayout>
</RelativeLayout>