<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="100dp"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:hint="@string/nomUtilisateur" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:hint="@string/motDePasse" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:id="@+id/buttonFB"
                android:text="@string/facebook">
            </Button>

            <Button
                android:id="@+id/buttonConnection"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:text="@string/connection" />
        </LinearLayout>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/vous_n_avez_pas_un_compte" />

        <Button
            android:id="@+id/idInscriptionUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/enregistrezVous"
            android:textSize="11sp" />

    </LinearLayout>
</RelativeLayout>